[project]
name = "World Of Industries"
version = "0.1.0"
description = "This is World of Industries"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet>=0.81.0",
  "pymongo",
  "requests"
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "qzz.io.worldofindustries"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "worldofindustries"

# company name to display in about app dialogs
company = "Aarushiswinner Yo"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2026 by Aarushsiwinner"

[tool.flet.app]
path = "src"
split_per_abi = true